--- a/blog/package.json
+++ b/blog/package.json
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "hhttps://final-blog-api.vercel.app/api/"
+  "proxy": "https://final-blog-api.vercel.app/api/"
 }
